tests/spec/fail/list_has_wrong_arity.aja
nums = [1]
print(nums.has())
